fixed food menus not wrapping on mobile

--- a/wp-content/themes/123_parent/__build/_css/main.css
+++ b/wp-content/themes/123_parent/__build/_css/main.css
@@ -2977,9 +2977,35 @@ section.hero#hero_slider > div#slick_slider_hero .slick-track {
     background-position: center center;
     background-repeat: no-repeat;
   }
+  section.hero.header__one#hero_image .hero_foreground, section.hero.header__one#hero_slider .hero_foreground {
+    padding: 0 180px 0;
+  }
+  section.hero.header__two#hero_image .hero_foreground, section.hero.header__two#hero_slider .hero_foreground {
+    padding: 0 152px 0;
+  }
+  section.hero.header__three#hero_image .hero_foreground, section.hero.header__three#hero_slider .hero_foreground {
+    padding: 113px 148px 0;
+  }
+  section.hero.header__four#hero_image .hero_foreground, section.hero.header__four#hero_slider .hero_foreground {
+    padding: 0 141px 0;
+  }
+  section.hero.header__five#hero_image .hero_foreground, section.hero.header__five#hero_slider .hero_foreground, section.hero.header__six#hero_image .hero_foreground, section.hero.header__six#hero_slider .hero_foreground {
+    padding: 0 146px 0;
+  }
+  section.hero.header__seven#hero_image .hero_foreground, section.hero.header__seven#hero_slider .hero_foreground {
+    padding: 0 137px 0;
+  }
+  section.hero.header__eight#hero_image .hero_foreground, section.hero.header__eight#hero_slider .hero_foreground {
+    padding: 84px 142px 0;
+  }
+  section.hero.header__nine#hero_image .hero_foreground, section.hero.header__nine#hero_slider .hero_foreground {
+    padding: 41px 158px 0;
+  }
+  section.hero.header__ten#hero_image .hero_foreground, section.hero.header__ten#hero_slider .hero_foreground {
+    padding: 0 156px 0;
+  }
   section.hero#hero_image .hero_foreground, section.hero#hero_slider .hero_foreground {
     position: relative;
-    padding: 20px 180px 0;
     display: grid;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, auto);
@@ -3053,7 +3079,7 @@ section.hero#hero_slider > div#slick_slider_hero .slick-track {
   section.hero .hero_foreground img {
     margin: 0 auto;
     max-width: 500px;
-    max-height: 500px;
+    max-height: 250px;
   }
   section.hero .hero_foreground p {
     color: #fff;
@@ -3123,14 +3149,17 @@ section.hero#hero_slider > div#slick_slider_hero .slick-track {
   }
 }
 @media only screen and (max-width: 960px) {
-  section.hero#hero_image .hero_foreground, section.hero#hero_slider .hero_foreground {
-    padding: 25px 0 0;
+  section.hero.header__one#hero_image .hero_foreground, section.hero.header__one#hero_slider .hero_foreground, section.hero.header__two#hero_image .hero_foreground, section.hero.header__two#hero_slider .hero_foreground, section.hero.header__three#hero_image .hero_foreground, section.hero.header__three#hero_slider .hero_foreground, section.hero.header__four#hero_image .hero_foreground, section.hero.header__four#hero_slider .hero_foreground, section.hero.header__five#hero_image .hero_foreground, section.hero.header__five#hero_slider .hero_foreground, section.hero.header__six#hero_image .hero_foreground, section.hero.header__six#hero_slider .hero_foreground, section.hero.header__seven#hero_image .hero_foreground, section.hero.header__seven#hero_slider .hero_foreground, section.hero.header__eight#hero_image .hero_foreground, section.hero.header__eight#hero_slider .hero_foreground, section.hero.header__nine#hero_image .hero_foreground, section.hero.header__nine#hero_slider .hero_foreground, section.hero.header__ten#hero_image .hero_foreground, section.hero.header__ten#hero_slider .hero_foreground {
+    padding: 80px 0 0;
   }
 }
 @media only screen and (max-width: 640px) {
-  section.hero#hero_image .hero_foreground img, section.hero#hero_slider .hero_foreground img {
-    max-width: 300px;
-    max-height: 300px;
+  section.hero.header__one#hero_image .hero_foreground, section.hero.header__one#hero_slider .hero_foreground, section.hero.header__two#hero_image .hero_foreground, section.hero.header__two#hero_slider .hero_foreground, section.hero.header__three#hero_image .hero_foreground, section.hero.header__three#hero_slider .hero_foreground, section.hero.header__four#hero_image .hero_foreground, section.hero.header__four#hero_slider .hero_foreground, section.hero.header__five#hero_image .hero_foreground, section.hero.header__five#hero_slider .hero_foreground, section.hero.header__six#hero_image .hero_foreground, section.hero.header__six#hero_slider .hero_foreground, section.hero.header__seven#hero_image .hero_foreground, section.hero.header__seven#hero_slider .hero_foreground, section.hero.header__eight#hero_image .hero_foreground, section.hero.header__eight#hero_slider .hero_foreground, section.hero.header__nine#hero_image .hero_foreground, section.hero.header__nine#hero_slider .hero_foreground, section.hero.header__ten#hero_image .hero_foreground, section.hero.header__ten#hero_slider .hero_foreground {
+    display: flex;
+    justify-content: center;
+    grid-template-columns: none;
+    grid-template-rows: none;
+    grid-template-areas: none;
   }
 }
 @media only screen {
@@ -5646,7 +5675,7 @@ section.block__food_menus > .container #tabs_style__pills .menu_photo_tiled_x3 >
   }
   section.block__food_menus > .container #tabs_style__sidebar {
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
   }
   section.block__food_menus > .container #tabs_style__sidebar > .menu_area {
     flex: 1 1 80%;
