--- a/wp-content/themes/123_parent/__pre/_sass/blocks/_food_menus_block.scss
+++ b/wp-content/themes/123_parent/__pre/_sass/blocks/_food_menus_block.scss
@@ -413,7 +413,7 @@
             // Menu style
             #tabs_style__sidebar {
                 display: flex;
-                flex-flow: row nowrap;
+                flex-flow: row wrap;
                 > .menu_area {
                     flex: 1 1 80%;
                     .menu_photo_tiled_x3 {
